--- a/home/home.html
+++ b/home/home.html
@@ -6,5 +6,8 @@
 <body>
     <h1>{{ restaurant_name }}</h1>
     <p>{{ welcome_message}}</p>
+    <p><strong><Contact us:</strong>
+    {{ phone_number }}
 </body>
 </html>
+
