--- a/orders/menu_list.html
+++ b/orders/menu_list.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menu</title>
+        <title>Our Menu</title>
+        <style>
+            .menu-container {
+                display: grid;
+                grid_template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 20px;
+                padding: 20px;
+                }
+            .menu-item {
+                border: 1px solid #ddd;
+                border-radius: 10px;
+                padding: 15px;
+                text-align: center;
+                background: #fafafa;
+                box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+                }
+            .menu-item img {
+                width: 100px;
+                max-width: 200px;
+                height: auto;
+                border-radius: 8px;
+                marhin-bottom: 10px;
+                }
+            .menu-item h3 {
+                margin: 10px 0 5px;
+                }
+            .menu-item p {
+                font-size: 14px;
+                color: #555;
+                }
+            .price {
+                font-weight: bold;
+                color: #2c3e50;
+                }
+        </style>
     </head>
     <body>
-        <h1>Our Menu</h1>
-        <ul>
-            {% for item in items %}
-                <li>
-                    <h3>{{ item.name }} - ${{ item.price }}</h3>
-                    <p>{{ item.description }}</p>
-                    {% if item.image %}
-                    <img src="{{ item.image.url }}"
-                    alt="{{ item.name }}"
-                    width="150">
-                    {% endif %}
-                </li>
-            {% endfor %}
-        </ul>
+        <h1 style="text-align:center;"> Our Menu</h1>
+        div class="menu-container">
+        {% for item in items %}
+        <div class="menu-item">
+            <img src="{{ item.image.url }}"
+            alt="{{ item.name }}">
+            {% else %}
+            <img src="/static/images/placeholder.png" alt="No image">
+            {% endif %}
+            <h3>{{ item.name }}</h3>
+            <p>{{ item.description }}</p>
+            <p class="price">{{ item.price }}</p>
+        </div>
+        {% endfor %}
     </body>
 </html>
