--- a/home/home.html
+++ b/home/home.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{{ restaurant_name }}</title>
-</head>
-<body>
-    <h1>{{ restaurant_name }}</h1>
-    <p>{{ welcome_message}}</p>
-    <p><strong><Contact us:</strong>
-    {{ phone_number }}
-</body>
+    <head>
+        <title>Restaurant Address</title>
+    </head>
+    <body>
+        <h1>Welcome to {{ restaurant.name }}</h1>
+        <p><strong>Address:</strong>{{ restaurant.address }}</p>
+    </body>
 </html>
-
