--- a/home/home.html
+++ b/home/home.html
@@ -6,5 +6,12 @@
     <body>
         <h1>Welcome to {{ restaurant.name }}</h1>
         <p><strong>Address:</strong>{{ restaurant.address }}</p>
+
+        <h2>Opening Hours</h2>
+        <ul>
+            {% for day, hours in restaurant.opening_hours.items %}
+            <li><strong>{{ day }}:</strong>
+            {{ hours }}</li>
+            {% endfor %}
     </body>
 </html>
