--- a/home/homepage.html
+++ b/home/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ restaurant_name }}</title>
+        <title>Restaurant Homepage</title>
     </head>
     <body>
-        <h1>Welcome to {{ restaurant_name }}</h1>
+        <h1>Welcome to {{ restaurant.name }}</h1>
+        <p>Phone Number: {{ restaurant.phone_number }}</p>
     </body>
 </html>
