--- a/home/home.html
+++ b/home/home.html
@@ -1,30 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Restaurant Homepage</title>
-        <style>
-            .phone-box {
-                margin-top: 20px;
-                padding: 15px;
-                background: #f1f1f1;
-                border-radius: 8px;
-                font-size: 18px;
-                text-align: center;
-                font-weight: bold;
-                color: #2c3e50;
-                box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-                }
-            .phone-box a {
-                text-decoration: none;
-                color: #d35400;
-                }
-        </style>
-    </head>
-    <body>
-        <h1>Welcome to our Restaurant</h1>
-        <div class="phone-box">
-                Call Us: <a href="tel: {{ phone_number }}">{{ phone_number }}</a>
-        </div>
-    </body>
-</html>
+<h2>Restaurant Opening Hours</h2>
+<table border="1" cellpadding="10">
+    {% for day, hours in opening_hours.items %}
+        <tr>
+            <td><strong>{{ day }}</strong></td>
+            <td>{{ hours }}</td>
+        </tr>
+    {% endfor %}
+</table>
 
+    
